<resources>
    <string name="app_name">智慧大洼</string>
    <string name="action_settings">Settings</string>

    <!-- the buttom items-->
    <string name="events">事件</string>

    <string name="weather">天气信息</string>
    <string name="to_do_event">待办事项</string>
    <string name="already_completed_event">已完成的事件</string>
    <string name="all_event">全部事件</string>
    <string name="time_location">实时地图</string>

    <!--tabView-->
    <string name="my_work">我的工作</string>
    <string name="push_work">事件上报</string>
    <string name="user_center">便民中心</string>
    <string name="video_chat">视频通话</string>
    <string name="personal_center">个人中心</string>

    <!-- video chat-->
    <string name="area">一级部门</string>
    <string name="street">二级部门</string>
    <string name="village">三级部门</string>
    <string name="manager">网格员</string>

    <string name="my_location">我的位置</string>
    <string name="event_name">事件名称</string>
    <string name="event_desc">事件描述</string>
    <string name="take_photo">拍照上传</string>
    <string name="voice_push">语音上传</string>
    <string name="video_push">视频上传</string>

    <string name="choice">选择</string>

    <!--login-->
    <string name="phone">电话</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="name">姓名</string>
    <string name="id_card">身份证</string>
    <string name="new_password">新密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_title">请登录</string>
    <string name="register_title">请注册</string>
    <string name="register_success">注册成功</string>
    <string name="forget_password">忘记密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="find_password">找回密码</string>
    <string name="reset_password_success">重置密码成功</string>
    <string name="success">成功</string>
    <string name="failure">失败</string>
    <string name="requesting">数据请求中</string>
    <string name="uploading">上传中…</string>
    <string name="no_data">暂无数据</string>
    <string name="no_network">网络异常</string>
    <string name="start_recoder">长按录制</string>
    <string name="save_recoder">松开保存</string>
    <string name="save_recoder_tip">录制时间太短</string>
    <string name="take_pic">拍照</string>
    <string name="select_pic">从相册选择</string>
    <string name="per_tip">需要权限才能继续</string>
    <string name="input">请输入</string>
    <string name="submit">确定</string>
    <string name="login_error">用户名或密码错误</string>
    <string name="fill_in_error">请输入完整信息</string>
    <string name="password_inconsistency">两次密码不一致</string>
    <string name="reset_password">修改密码</string>
    <string name="logout">退出登录</string>


    <!-- 便民服务-->
    <string name="common_service">常用服务</string>
    <string name="ems">物流查询</string>
    <string name="phone_bill">话费充值</string>
    <string name="illeglal">违章查询</string>
    <string name="search">搜索</string>
    <string name="xinlang">新浪</string>
    <string name="sohu">搜狐</string>
    <string name="qq">腾讯</string>
    <string name="wangyi">网易</string>
    <string name="common_software">常用软件</string>
    <string name="us_group">美团</string>
    <string name="c_trip">携程</string>
    <string name="one_city">同城</string>
    <string name="baidu_yun">百度云</string>
    <string name="tianmao">天猫</string>
    <string name="eleme">饿了么</string>
    <string name="dazhongdianping">大众点评</string>
    <string name="jingdong">京东</string>
    <string name="youku">优酷</string>

    <!--system-->
    <string name="press_again_to_exit">再按一次退出</string>
    <string name="set">设置</string>
    <string name="call_other_refuse">对方拒绝接听</string>
    <string name="call_error">连接失败</string>
    <string name="call_other_no_online">对方不在线</string>
    <string name="call_other_calling">对方正在通话中</string>
    <string name="call_other_no_listener">对方未接听</string>
    <string name="call_other_hang_up">对方已挂断</string>
    <string name="call_in_tip">想邀请你进行视频聊天</string>
    <string name="call_out_tip">等待对方接受邀请</string>
    <string name="network_exp">网络不稳定</string>
    <string name="call_time">通话时长 %1$s</string>
    <string name="un_listen">未接听</string>
    <string name="cancle">挂断</string>
    <string name="mute">静音</string>
    <string name="speaker">免提</string>
    <string name="narrow">Narrow</string>
    <string name="swit">切换摄像头</string>
    <string name="cancel">取消</string>
    <string name="accept">接受</string>
    <string name="err_request_permission">抱歉, 我们需要获取权限才能继续</string>

    <!--事件详情-->
    <string name="event_address">事件地址</string>
    <string name="event_status">事件状态</string>
    <string name="event_execute_time">执行时间</string>
    <string name="event_detail">事件详情</string>
    <string name="image">图片</string>
    <string name="voice">语音</string>
    <string name="video">视频</string>
    <string name="deal_msg">处理意见</string>
    <string name="no_deal_msg">暂无意见</string>
    <string name="verify_failure">验证失败</string>
    <string name="input_correct_phone">请输入正确的电话号码</string>
    <string name="input_verify_code">请输入验证码</string>
    <string name="verify_code_error">验证码错误</string>
    <string name="feedback_list">反馈列表</string>
    <string name="set_server">设置服务器地址</string>
    <string name="my_task">我的任务</string>
    <string name="location_empty">没有获取到当前位置，请确认打开GPS</string>
    <string name="loading">加载中...</string>


</resources>
